# Accounting-App

./: README.md  pyproject.toml
.github/workflows/: ci.yml
finance_app/: hooks.py
